--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,15 +8,19 @@
     color: white;
     position: fixed;
     top: 0;
+    background-color: black;
+    padding: 0;
+    margin: 0;
     zIndex: 10;
-    width: 100%; /* Ensure full width */
+    width: 99%; /* Ensure full width */
+    overflow-x: hidden;
 }
 
 /* Adjustments for tablets */
 @media (max-width: 768px) {
     .header {
         flexDirection: 'column'; /* Stack items vertically */
-        padding: 7px; /* Adjust padding */
+        padding: 7px; /*Adjust padding */
     }
 }
 
@@ -24,6 +28,6 @@
 @media (max-width: 480px) {
     .header {
         flexDirection: 'column'; /* Keep items stacked */
-        padding: 12px; /* Adjust padding */
+        /*padding: 12px; Adjust padding */
     }
 }
