--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,15 @@
 /* index.css or global.css */
 /* Add this to your global.css or the relevant component's CSS module */
-header {
-  width: 98%;
-  background-color: black; /* Or the color you need */
-  padding: 0;
-  margin: 0;
-  /* Other styles */
-}
+
 .content {
   padding-top: 70px; /* Adjust this value to the height of your header */
+  margin: 0 auto; /* Centers the content */
+  padding: 0 15px; /* Adds padding inside the container */
+  max-width: 1200px; /* Maximum width of the content */
+  width: 100%; /* Makes the width responsive */
 }
 .main-content {
-  padding-top: 20px; /* Replace [heightOfYourHeader] with the actual height */
+  padding-top: 100px; /* Replace [heightOfYourHeader] with the actual height */
 }
 .active-link {
   text-decoration: underline;
@@ -33,11 +31,23 @@ header {
   color: aqua;
   /* Other styles */
 }
+body {
+  margin: 0; /* Removes default margin */
+  padding-top: /* Height of your header */; /* Ensures content starts below the header */
+}
+
 
 .rest-of-the-page {
-
   background-color: black;
   color: white;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  overflow-x: hidden; /* Prevents horizontal overflow */
+  width: 100vw; /* Ensures it spans the full viewport width */
+  max-width: 100%; /* Prevents extending beyond the viewport */
+  position: relative; /* If you need to position children absolutely within */
+  box-sizing: border-box; 
 }
 
 body {
@@ -100,3 +110,13 @@ para {
   color: #888;
 }
 
+.howitworks:hover {
+  transform: scale(1.05);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
